feat: Implement parallel segment downloading, enhance UI/UX with smooth transitions and navigation styling, and add new log and manual templates.

--- a/templates/anime_downloader_anilife_category.html
+++ b/templates/anime_downloader_anilife_category.html
@@ -711,7 +711,7 @@
         border: 5px solid rgba(0, 255, 170, 0.7);
         border-right: none;
         border-top: none;
-        backgroudn-clip: padding;
+        background-clip: padding;
         box-shadow: inset 0px 0px 10px rgba(0, 255, 170, 0.15);
     }
 
