--- a/templates/anime_downloader_ohli24_request.html
+++ b/templates/anime_downloader_ohli24_request.html
@@ -44,6 +44,7 @@
         </form>
     </div>
     <!--전체-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <script src="{{ url_for('.static', filename='js/sjva_ui14.js') }}"></script>
 
     <script type="text/javascript">
